# BareBones

./: CMakeLists.txt  CMakePresets.json  boot.s  i686-elf.toolchain.cmake  justfile  kernel.c  kernel.cpp  linker.ld
